--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=supportalproject
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.value.default.type=org.example.supportalproject.messages.UserCreated
+
+
